--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
  
 </div>
 
-	<div class="grid-item grid-item-12"12>
-	 	 
+	<div class="grid-item grid-item-12"12></div>	 	 
  
 </body>
 </html>
