--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
  
 
-<div class="grid-item grid-item-12"12>div 12</div>
+<div class="grid-item grid-item-12"12>div 12 here </div>
  
 </body>
 </html>
