--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
  
 
-<div class="grid-item grid-item-12"12> ... </div>
+<div class="grid-item grid-item-12"12> END... </div>
  
 </body>
 </html>
